; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_root_bus_module_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_root_bus_module_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i32, i32* }

@bus_data_devices = common dso_local global i32 0, align 4
@root_driver = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"root\00", align 1
@root_bus = common dso_local global %struct.TYPE_4__* null, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"System root bus\00", align 1
@DS_ATTACHED = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@root_devclass = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @root_bus_module_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @root_bus_module_handler(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %29 [
    i32 129, label %9
    i32 128, label %26
  ]

9:                                                ; preds = %3
  %10 = call i32 @TAILQ_INIT(i32* @bus_data_devices)
  %11 = call i32 @kobj_class_compile(i32 ptrtoint (i32* @root_driver to i32))
  %12 = call %struct.TYPE_4__* @make_device(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0)
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** @root_bus, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root_bus, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %14, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root_bus, align 8
  %16 = ptrtoint %struct.TYPE_4__* %15 to i32
  %17 = call i32 @kobj_init(i32 %16, i32 ptrtoint (i32* @root_driver to i32))
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root_bus, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  store i32* @root_driver, i32** %19, align 8
  %20 = load i32, i32* @DS_ATTACHED, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root_bus, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  %23 = load i32, i32* @FALSE, align 4
  %24 = call i32 @devclass_find_internal(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* null, i32 %23)
  store i32 %24, i32* @root_devclass, align 4
  %25 = call i32 (...) @devinit()
  store i32 0, i32* %4, align 4
  br label %31

26:                                               ; preds = %3
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root_bus, align 8
  %28 = call i32 @device_shutdown(%struct.TYPE_4__* %27)
  store i32 0, i32* %4, align 4
  br label %31

29:                                               ; preds = %3
  %30 = load i32, i32* @EOPNOTSUPP, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %26, %9
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @TAILQ_INIT(i32*) #1

declare dso_local i32 @kobj_class_compile(i32) #1

declare dso_local %struct.TYPE_4__* @make_device(i32*, i8*, i32) #1

declare dso_local i32 @kobj_init(i32, i32) #1

declare dso_local i32 @devclass_find_internal(i8*, i32*, i32) #1

declare dso_local i32 @devinit(...) #1

declare dso_local i32 @device_shutdown(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
